# bsu-labs

OS/Lab1/DynamicLibrary/Vector/: Vector.sln
OS/Lab1/Program/: Program.sln
OS/Lab1/Program/Debug/: Program.ilk
OS/Lab1/Program/Program/: Program.vcxproj
OS/Lab1/StaticLibrary/Number/: Number.sln
OS/Lab2/DynamicLibrary/Vector/: CMakeLists.txt  Vector.h
OS/Lab2/Program/: CMakeLists.txt
OS/Lab2/StaticLibrary/Number/: CMakeLists.txt  Number.h
OS/Lab3_Linux/: lab3  lab3.sh  main.cpp
OS/Lab3_Linux/Number/: Number.cpp
OS/Lab3_Linux/Vector/: Vector.cpp
OS/Lab3_Windows/: lab3.ps1  main.cpp
OS/Lab3_Windows/Number/: Number.cpp  libNumber.lib
OS/Lab3_Windows/Vector/: Vector.cpp  Vector.h
OS/Lab4/BufferedChannel/: BufferedChannel.sln
OS/Lab4/BufferedChannel/BufferedChannel/: BufferedChannel.h  BufferedChannel.vcxproj  Source.cpp  (+1 more)
OS/Lab5_Linux/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixCreator.cpp  MatrixCreator.h  MatrixMultiplicator.cpp  MatrixMultiplicator.h  main.cpp
OS/Lab5_Windows/: Lab5.sln
OS/Lab5_Windows/Lab5/: Lab5.cpp  Lab5.vcxproj  Lab5.vcxproj.filters  Matrix.h  MatrixMultiplicator.cpp  MatrixMultiplicator.h
OS/Lab7_Linux/Killer/: main.cpp
OS/Lab7_Linux/SimpleProcess/: CMakeLists.txt  main.cpp
OS/Lab7_Linux/User/: CMakeLists.txt  main.cpp
OS/Lab7_Windows/: Lab7.sln
OS/Lab7_Windows/Killer/: Killer.cpp  Killer.vcxproj  Killer.vcxproj.filters
OS/Lab7_Windows/SimpleProcess/: SimpleProcess.cpp  SimpleProcess.vcxproj  SimpleProcess.vcxproj.filters
OS/Lab7_Windows/User/: User.cpp  User.vcxproj  User.vcxproj.filters
(+43 files in other folders)
